syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message ResVersionConfig {
	string version_suffix = 5;
	string branch = 6;
	string next_script_version = 7;
	string md5 = 3;
	string release_total_size = 4;
	bool relogin = 2;
	uint32 version = 1;
}