syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message StopServerInfo {
	string content_msg = 4;
	string url = 3;
	uint32 stop_begin_time = 1;
	uint32 stop_end_time = 2;
}